--- a/AnalyseTool/Views/AnalyseToolView.xaml
+++ b/AnalyseTool/Views/AnalyseToolView.xaml
@@ -1,11 +1,11 @@
 ﻿<Window
-    x:Class="AnalyseTool.Views.AnalyseToolView"
+    x:Class="AnalyseTool.AnalyseToolView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:viewModel="clr-namespace:AnalyseTool.ViewModels"
-    xmlns:view="clr-namespace:AnalyseTool.Views"
+    xmlns:viewModel="clr-namespace:AnalyseTool"
+    xmlns:view="clr-namespace:AnalyseTool"
     mc:Ignorable="d"
     d:DataContext="{d:DesignInstance viewModel:AnalyseToolViewModel}"
     ResizeMode="CanResize"
