--- a/AnalyseTool/Views/SubViewAnalyseTool.xaml
+++ b/AnalyseTool/Views/SubViewAnalyseTool.xaml
@@ -1,26 +1,29 @@
-﻿<UserControl x:Class="AnalyseTool.Views.SubViewAnalyseTool"
+﻿<UserControl x:Class="AnalyseTool.SubViewAnalyseTool"
             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
             xmlns:scm="clr-namespace:System.ComponentModel;assembly=WindowsBase"
             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-            xmlns:view="clr-namespace:AnalyseTool.Views"
-            xmlns:viewModel="clr-namespace:AnalyseTool.ViewModels"
-            xmlns:model="clr-namespace:AnalyseTool.Models"
+            xmlns:local="clr-namespace:AnalyseTool"
             mc:Ignorable="d"
-            d:DataContext="{d:DesignInstance Type=viewModel:AnalyseToolViewModel}"
+            xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
+            d:DataContext="{d:DesignInstance Type=local:AnalyseToolViewModel}"
             d:Height="450" 
             d:Width="800">
     
+
+        
     <UserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="pack://application:,,,/AnalyseTool;component/Helper/wpfLibrary.xaml"/>
+                <ResourceDictionary Source="pack://application:,,,/AnalyseTool;component/Resources/wpfLibrary.xaml"/>
             </ResourceDictionary.MergedDictionaries>
             <!-- Конвертер для отступов на основе уровня вложенности --><!--
             <helper:LevelToMarginConverter x:Key="LevelToMarginConverter"/>-->
         </ResourceDictionary>
     </UserControl.Resources>
+    
+    
     
     <Grid>
         <Grid.RowDefinitions>
@@ -59,11 +62,18 @@
                   CanUserDeleteRows="False"
                   x:Name="dataGridData"
                   GridLinesVisibility="None"
-                  Grid.Row="1">
-
+                  Grid.Row="1"
+                  LoadingRow="DataGrid_LoadingRow">
+            
+            <DataGrid.RowStyle>
+                <Style TargetType="DataGridRow">
+                    <EventSetter Event="PreviewMouseLeftButtonDown" Handler="DataGridRow_MouseLeftButtonDown"/>
+                </Style>
+            </DataGrid.RowStyle>
+            
             <DataGrid.Columns>
 
-                <!-- Column for displaying the category -->
+                 <!--Column for displaying the category--> 
                 <DataGridTemplateColumn Header="Category Name">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
@@ -72,7 +82,7 @@
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
 
-                <!-- Column for displaying the parameter name -->
+                 <!--Column for displaying the parameter name--> 
                 <DataGridTemplateColumn Header="Parameter Name">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
@@ -81,7 +91,7 @@
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
 
-                <!-- Column for displaying the parameter count -->
+                 <!--Column for displaying the parameter count--> 
                 <DataGridTemplateColumn Header="Parameter&#10;Count" Width="65">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
@@ -90,7 +100,7 @@
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
 
-                <!-- Column for displaying the count of empty parameters -->
+                 <!--Column for displaying the count of empty parameters--> 
                 <DataGridTemplateColumn Header="Parameter&#10;Empty" Width="65">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
@@ -99,7 +109,7 @@
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
 
-                <!-- Column for displaying the count of filled parameters -->
+                 <!--Column for displaying the count of filled parameters--> 
                 <DataGridTemplateColumn Header="Parameter&#10;Filled" Width="65">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
@@ -108,21 +118,21 @@
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
 
-                <!-- Column for displaying the percentage of filled parameters -->
+                 <!--Column for displaying the percentage of filled parameters--> 
                 <DataGridTemplateColumn Header="Parameter&#10;Filled in %" Width="65">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
                             <Grid>
-                                <!-- Rectangle visualizing the percentage -->
+                                 <!--Rectangle visualizing the percentage--> 
                                 <Rectangle Width="{Binding ParameterFilledProzent}" Height="18" Fill="Pink" HorizontalAlignment="Left" />
-                                <!-- Text displaying the percentage -->
+                                 <!--Text displaying the percentage--> 
                                 <TextBlock Text="{Binding ParameterFilledProzent}" HorizontalAlignment="Center" />
                             </Grid>
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
 
-                <!-- Column with a button to select empty elements -->
+                 <!--Column with a button to select empty elements--> 
                 <DataGridTemplateColumn Header="Select Empty&#10;Elements" Width="80">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
@@ -135,7 +145,7 @@
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
 
-                <!-- Column with a button to select filled elements -->
+                 <!--Column with a button to select filled elements--> 
                 <DataGridTemplateColumn Header="Select Filled&#10;Elements" Width="80">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
@@ -150,7 +160,7 @@
 
             </DataGrid.Columns>
 
-            <!-- RowDetailsTemplate to display child elements -->
+             <!--RowDetailsTemplate to display child elements--> 
             <DataGrid.RowDetailsTemplate>
                 <DataTemplate>
                     <ScrollViewer VerticalScrollBarVisibility="Auto" MaxHeight="200">
@@ -165,6 +175,8 @@
                                   HorizontalAlignment="Left"
                                   Margin="40,0,0,0"
                                   HeadersVisibility="Column">
+
+                            
                             <DataGrid.Columns>
                                 <DataGridTemplateColumn Header="Parameter Value" MaxWidth="150">
                                     <DataGridTemplateColumn.CellTemplate>
@@ -201,7 +213,6 @@
             </DataGrid.RowDetailsTemplate>
 
         </DataGrid>
-
 
         <!--<ListView ItemsSource="{Binding ParameterDefinitions}"
                   d:ItemsSource="{d:SampleData ItemCount=2}"
