--- a/AnalyseTool/ParameterControl/Views/SubViewAnalyseTool.xaml
+++ b/AnalyseTool/ParameterControl/Views/SubViewAnalyseTool.xaml
@@ -1,22 +1,21 @@
-﻿<UserControl x:Class="AnalyseTool.SubViewAnalyseTool"
+﻿<UserControl x:Class="AnalyseTool.ParameterControl.Views.SubViewAnalyseTool"
             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
             xmlns:scm="clr-namespace:System.ComponentModel;assembly=WindowsBase"
             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-            xmlns:local="clr-namespace:AnalyseTool"
+            xmlns:viewmodel="clr-namespace:AnalyseTool.ParameterControl.ViewModels"
+            xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
             mc:Ignorable="d"
-            xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
-            d:DataContext="{d:DesignInstance Type=local:AnalyseToolViewModel}"
+            d:DataContext="{d:DesignInstance Type=viewmodel:AnalyseToolViewModel}"
             d:Height="450" 
             d:Width="800">
-    
 
-        
     <UserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="pack://application:,,,/AnalyseTool;component/Resources/wpfLibrary.xaml"/>
+                <ResourceDictionary Source="pack://application:,,,/Wpf.Ui;component/Resources/Theme/Light.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/Wpf.Ui;component/Resources/Wpf.Ui.xaml" />
             </ResourceDictionary.MergedDictionaries>
             <!-- Конвертер для отступов на основе уровня вложенности --><!--
             <helper:LevelToMarginConverter x:Key="LevelToMarginConverter"/>-->
