--- a/AnalyseTool/Resources/wpf/BaseView.xaml
+++ b/AnalyseTool/Resources/wpf/BaseView.xaml
@@ -1,37 +1,40 @@
 ﻿<Window
-    x:Class="AnalyseTool.AnalyseToolView"
+    x:Class="AnalyseTool.Resources.wpf.BaseView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:viewModel="clr-namespace:AnalyseTool"
-    xmlns:view="clr-namespace:AnalyseTool"
+    xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
     mc:Ignorable="d"
-    d:DataContext="{d:DesignInstance viewModel:AnalyseToolViewModel}"
     ResizeMode="CanResize"
     Background="White"
     WindowStartupLocation="CenterScreen"
     Title="AnalyseTool"
     Height="650"
     Width="850">
-
+    <Window.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="pack://application:,,,/Wpf.Ui;component/Resources/Theme/Light.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/Wpf.Ui;component/Resources/Wpf.Ui.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </Window.Resources>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="40"/>
             <RowDefinition/>
         </Grid.RowDefinitions>
         <TextBlock Grid.Row="0" 
+                   x:Name="TitleView"
                    VerticalAlignment="Center"
                    Margin="30,0,0,0"
                    Text="Parameter Check" 
                    FontFamily="Impact" 
                    FontSize="30"
                    FontWeight="Bold"/>
-        <ContentControl Grid.Row="1">
-            <Grid Margin="30,0,30,30">
-                <view:SubViewAnalyseTool/>
-            </Grid>
-        </ContentControl>
-
+        <Grid Grid.Row="1" Margin="30,0,30,30" x:Name="ContentGrid">
+            
+        </Grid>
     </Grid>
 </Window>
