--- a/AnalyseTool/ParameterControl/Views/SubViewAnalyseTool.xaml
+++ b/AnalyseTool/ParameterControl/Views/SubViewAnalyseTool.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="AnalyseTool.ParameterControl.Views.SubViewAnalyseTool"
+﻿<Window x:Class="AnalyseTool.ParameterControl.Views.SubViewAnalyseTool"
             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
             xmlns:scm="clr-namespace:System.ComponentModel;assembly=WindowsBase"
@@ -7,11 +7,10 @@
             xmlns:viewmodel="clr-namespace:AnalyseTool.ParameterControl.ViewModels"
             xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
             mc:Ignorable="d"
-            d:DataContext="{d:DesignInstance Type=viewmodel:AnalyseToolViewModel}"
             d:Height="450" 
             d:Width="800">
 
-    <UserControl.Resources>
+    <Window.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="pack://application:,,,/Wpf.Ui;component/Resources/Theme/Light.xaml" />
@@ -20,7 +19,7 @@
             <!-- Конвертер для отступов на основе уровня вложенности --><!--
             <helper:LevelToMarginConverter x:Key="LevelToMarginConverter"/>-->
         </ResourceDictionary>
-    </UserControl.Resources>
+    </Window.Resources>
     
     
     
@@ -39,14 +38,10 @@
                     Content="Export to CSV"
                     Command="{Binding ExportToExcelCommand}"
                     x:Name="btn_Cancel"/>
-            <!--<Button Grid.Column="3" 
-                    Margin="10,10,0,10"
-                    Content="Export PDF" 
-                    Command="{Binding ExportToPdfCommand}"
-                    x:Name="btn_Start"/>-->
+
             <TextBox  
                  Grid.Row="0"
-                Margin="0,10,10,10"
+                 Margin="10"
                  VerticalContentAlignment="Center"
                  Text="{Binding ParameterFilter, UpdateSourceTrigger=PropertyChanged}">
             </TextBox>
@@ -62,16 +57,16 @@
                   x:Name="dataGridData"
                   GridLinesVisibility="None"
                   Grid.Row="1">
-            
+
             <DataGrid.RowStyle>
                 <Style TargetType="DataGridRow">
                     <EventSetter Event="PreviewMouseLeftButtonDown" Handler="DataGridRow_MouseLeftButtonDown"/>
                 </Style>
             </DataGrid.RowStyle>
-            
+
             <DataGrid.Columns>
 
-                 <!--Column for displaying the category--> 
+                <!--Column for displaying the category-->
                 <DataGridTemplateColumn Header="Category Name">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
@@ -80,7 +75,7 @@
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
 
-                 <!--Column for displaying the parameter name--> 
+                <!--Column for displaying the parameter name-->
                 <DataGridTemplateColumn Header="Parameter Name">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
@@ -89,7 +84,7 @@
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
 
-                 <!--Column for displaying the parameter count--> 
+                <!--Column for displaying the parameter count-->
                 <DataGridTemplateColumn Header="Parameter&#10;Count" Width="65">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
@@ -98,7 +93,7 @@
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
 
-                 <!--Column for displaying the count of empty parameters--> 
+                <!--Column for displaying the count of empty parameters-->
                 <DataGridTemplateColumn Header="Parameter&#10;Empty" Width="65">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
@@ -107,7 +102,7 @@
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
 
-                 <!--Column for displaying the count of filled parameters--> 
+                <!--Column for displaying the count of filled parameters-->
                 <DataGridTemplateColumn Header="Parameter&#10;Filled" Width="65">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
@@ -116,21 +111,21 @@
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
 
-                 <!--Column for displaying the percentage of filled parameters--> 
+                <!--Column for displaying the percentage of filled parameters-->
                 <DataGridTemplateColumn Header="Parameter&#10;Filled in %" Width="65">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
                             <Grid>
-                                 <!--Rectangle visualizing the percentage--> 
+                                <!--Rectangle visualizing the percentage-->
                                 <Rectangle Width="{Binding ParameterFilledProzent}" Height="18" Fill="Pink" HorizontalAlignment="Left" />
-                                 <!--Text displaying the percentage--> 
+                                <!--Text displaying the percentage-->
                                 <TextBlock Text="{Binding ParameterFilledProzent}" HorizontalAlignment="Center" />
                             </Grid>
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
 
-                 <!--Column with a button to select empty elements--> 
+                <!--Column with a button to select empty elements-->
                 <DataGridTemplateColumn Header="Select Empty&#10;Elements" Width="80">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
@@ -143,7 +138,7 @@
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
 
-                 <!--Column with a button to select filled elements--> 
+                <!--Column with a button to select filled elements-->
                 <DataGridTemplateColumn Header="Select Filled&#10;Elements" Width="80">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
@@ -158,12 +153,12 @@
 
             </DataGrid.Columns>
 
-             <!--RowDetailsTemplate to display child elements--> 
+            <!--RowDetailsTemplate to display child elements-->
             <DataGrid.RowDetailsTemplate>
                 <DataTemplate>
                     <Grid MaxHeight="200">
 
-                    <ListView ItemsSource="{Binding ChildParameters}"
+                        <ListView ItemsSource="{Binding ChildParameters}"
                                   d:ItemsSource="{d:SampleData ItemCount=2}"
                                   Grid.Row="1"
                                   x:Name="dataGridData">
@@ -212,143 +207,11 @@
                                 </GridView>
                             </ListView.View>
                         </ListView>
-                        <!--<DataGrid ItemsSource="{Binding ChildParameters}"
-                                  d:ItemsSource="{d:SampleData}"
-                                  AutoGenerateColumns="False"
-                                  CanUserAddRows="False"
-                                  GridLinesVisibility="None"
-                                  BorderBrush="Transparent"
-                                  BorderThickness="0"
-                                  MaxHeight="200"
-                                  HorizontalAlignment="Left"
-                                  Margin="40,0,0,0"
-                                  HeadersVisibility="Column"
-                                  PreviewMouseLeftButtonDown="OnDetailsClick">
-
-                            
-                            <DataGrid.Columns>
-                                <DataGridTemplateColumn Header="Parameter Value" MaxWidth="150">
-                                    <DataGridTemplateColumn.CellTemplate>
-                                        <DataTemplate>
-                                            <TextBlock Text="{Binding Name}" HorizontalAlignment="Center"/>
-                                        </DataTemplate>
-                                    </DataGridTemplateColumn.CellTemplate>
-                                </DataGridTemplateColumn>
-
-                                <DataGridTemplateColumn Header="Elements Count" MaxWidth="150">
-                                    <DataGridTemplateColumn.CellTemplate>
-                                        <DataTemplate>
-                                            <TextBlock Text="{Binding ParameterFilled}" HorizontalAlignment="Center"/>
-                                        </DataTemplate>
-                                    </DataGridTemplateColumn.CellTemplate>
-                                </DataGridTemplateColumn>
-
-                                <DataGridTemplateColumn Header="Select Filled Elements" MaxWidth="250">
-                                    <DataGridTemplateColumn.CellTemplate>
-                                        <DataTemplate>
-                                            <Button Height="18"
-                                                    Command="{Binding DataContext.SelectFilledElementsCommand, RelativeSource={RelativeSource AncestorType={x:Type UserControl}}}"
-                                                    CommandParameter="{Binding}"
-                                                    Content="Select"
-                                                    VerticalContentAlignment="Center"/>
-                                        </DataTemplate>
-                                    </DataGridTemplateColumn.CellTemplate>
-                                </DataGridTemplateColumn>
-                            </DataGrid.Columns>
-                        </DataGrid>-->
                     </Grid>
                 </DataTemplate>
-               
+
             </DataGrid.RowDetailsTemplate>
 
         </DataGrid>
-
-        <!--<ListView ItemsSource="{Binding ParameterDefinitions}"
-                  d:ItemsSource="{d:SampleData ItemCount=2}"
-                  Grid.Row="1"
-                  x:Name="dataGridData">
-            <ListView.View>
-                <GridView>
-                    <GridViewColumn>
-                        <GridViewColumnHeader Content="Category&#10;Name"/>
-                        <GridViewColumn.CellTemplate>
-                            <DataTemplate>
-                                <TextBlock Text="{Binding CategoriesString}"/>
-                            </DataTemplate>
-                        </GridViewColumn.CellTemplate>
-                    </GridViewColumn>
-                    <GridViewColumn>
-                        <GridViewColumnHeader Content="Parameter&#10;Name"/>
-                        <GridViewColumn.CellTemplate>
-                            <DataTemplate>
-                                <TextBlock Text="{Binding Name}"/>
-                            </DataTemplate>
-                        </GridViewColumn.CellTemplate>
-                    </GridViewColumn>
-                    <GridViewColumn>
-                        <GridViewColumnHeader Content="Parameter&#10;Count"/>
-                        <GridViewColumn.CellTemplate>
-                            <DataTemplate>
-                                <TextBlock Text="{Binding ParameterCount}"/>
-                            </DataTemplate>
-                        </GridViewColumn.CellTemplate>
-                    </GridViewColumn>
-                    <GridViewColumn>
-                        <GridViewColumnHeader Content="Parameter&#10;Empty"/>
-                        <GridViewColumn.CellTemplate>
-                            <DataTemplate>
-                                <TextBlock Text="{Binding ParameterEmpty}"/>
-                            </DataTemplate>
-                        </GridViewColumn.CellTemplate>
-                    </GridViewColumn>
-                    <GridViewColumn>
-                        <GridViewColumnHeader Content="Parameter&#10;Filled"/>
-                        <GridViewColumn.CellTemplate>
-                            <DataTemplate>
-                                <TextBlock Text="{Binding ParameterFilled}"/>
-                            </DataTemplate>
-                        </GridViewColumn.CellTemplate>
-                    </GridViewColumn>
-                    <GridViewColumn>
-                        <GridViewColumnHeader Content="Parameter&#10;Filled in %"/>
-                        <GridViewColumn.CellTemplate>
-                            <DataTemplate>
-                                <Grid>
-                                    <Rectangle Width="{Binding ParameterFilledProzent}" Height="18" Fill="Pink" HorizontalAlignment="Left"/>
-                                    <TextBlock Text="{Binding ParameterFilledProzent}" HorizontalAlignment="Center"/>
-                                </Grid>
-                            </DataTemplate>
-                        </GridViewColumn.CellTemplate>
-                    </GridViewColumn>
-                    <GridViewColumn>
-                        <GridViewColumnHeader Content="Select Emtpy&#10;Elements"/>
-                        <GridViewColumn.CellTemplate>
-                            <DataTemplate>
-                                <Button Width="40"
-                                        Height="18" 
-                                        Command="{Binding DataContext.SelectElementsCommand, RelativeSource={RelativeSource AncestorType={x:Type UserControl}}}"
-                                        CommandParameter="{Binding}"
-                                        Content="Select" 
-                                        VerticalContentAlignment="Center"/>
-                            </DataTemplate>
-                        </GridViewColumn.CellTemplate>
-                    </GridViewColumn>
-                    <GridViewColumn>
-                        <GridViewColumnHeader Content="Select Filled&#10;Elements"/>
-                        <GridViewColumn.CellTemplate>
-                            <DataTemplate>
-                                <Button Width="40"
-                                        Height="18" 
-                                        Command="{Binding DataContext.SelectFilledElementsCommand, RelativeSource={RelativeSource AncestorType={x:Type UserControl}}}"
-                                        CommandParameter="{Binding}"
-                                        Content="Select" 
-                                        VerticalContentAlignment="Center"/>
-                            </DataTemplate>
-                        </GridViewColumn.CellTemplate>
-                    </GridViewColumn>
-                </GridView>
-            </ListView.View>
-        </ListView>-->
-        
     </Grid>
-</UserControl>
+</Window>
