--- a/AnalyseTool/ParameterControl/SubViewAnalyseTool.xaml
+++ b/AnalyseTool/ParameterControl/SubViewAnalyseTool.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="AnalyseTool.ParameterControl.Views.SubViewAnalyseTool"
+﻿<UserControl x:Class="AnalyseTool.ParameterControl.Views.SubViewAnalyseTool"
             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
             xmlns:scm="clr-namespace:System.ComponentModel;assembly=WindowsBase"
@@ -10,7 +10,7 @@
             d:Height="450" 
             d:Width="800">
 
-    <Window.Resources>
+    <UserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="pack://application:,,,/Wpf.Ui;component/Resources/Theme/Light.xaml" />
@@ -19,7 +19,7 @@
             <!-- Конвертер для отступов на основе уровня вложенности --><!--
             <helper:LevelToMarginConverter x:Key="LevelToMarginConverter"/>-->
         </ResourceDictionary>
-    </Window.Resources>
+    </UserControl.Resources>
     
     
     
@@ -214,4 +214,4 @@
 
         </DataGrid>
     </Grid>
-</Window>
+</UserControl>
