--- a/AnalyseTool/RevitCommands/ParameterControl/MVVM/ParameterAnalyseTab/ParameterAnalyseUserControl.xaml
+++ b/AnalyseTool/RevitCommands/ParameterControl/MVVM/ParameterAnalyseTab/ParameterAnalyseUserControl.xaml
@@ -1,43 +1,50 @@
-﻿<Window
-    x:Class="AnalyseTool.ParameterControl.Views.AnalyseToolView"
+﻿<UserControl
+    x:Class="AnalyseTool.RevitCommands.ParameterControl.MVVM.ParameterAnalyseTab.ParameterAnalyseUserControl"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:AnalyseTool.RevitCommands.ParameterControl.MVVM.ParameterAnalyseTab"
+    xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:scm="clr-namespace:System.ComponentModel;assembly=WindowsBase"
-    xmlns:viewmodel="clr-namespace:AnalyseTool.ParameterControl.ViewModels"
-    Title="Analyze Tool"
-    Width="850"
-    Height="600"
-    MinWidth="500"
-    MinHeight="300"
-    DataContext="{Binding AnalyseToolViewModel, Source={StaticResource Locator}}"
-    Icon="pack://application:,,,/AnalyseTool;component/Resources/Icons/AnalyzeTool_Icon.ico"
+    d:DesignHeight="450"
+    d:DesignWidth="800"
     mc:Ignorable="d">
 
-    <Grid Margin="10">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="60" />
-            <RowDefinition />
-        </Grid.RowDefinitions>
-        <Grid Grid.Row="0">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition />
-                <ColumnDefinition />
-            </Grid.ColumnDefinitions>
-            <Button
-                x:Name="btn_Cancel"
-                Grid.Column="1"
-                Margin="10,10,0,10"
-                Command="{Binding ExportToExcelCommand}"
-                Content="Export to CSV" />
+    <UserControl.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <materialDesign:BundledTheme
+                    BaseTheme="Light"
+                    PrimaryColor="Blue"
+                    SecondaryColor="Lime" />
+
+                <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesign2.Defaults.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </UserControl.Resources>
+
+    <DockPanel Margin="10">
+
+        <DockPanel DockPanel.Dock="Top">
+            <StackPanel DockPanel.Dock="Right" Orientation="Horizontal">
+
+                <Button Command="" Content="Export to CSV" />
+
+                <Button
+                    Width="20"
+                    Margin="10,10,0,10"
+                    Command=""
+                    Content="te" />
+
+            </StackPanel>
+
 
             <TextBox
                 Grid.Row="0"
                 Margin="10"
                 VerticalContentAlignment="Center"
-                Text="{Binding ParameterFilter, UpdateSourceTrigger=PropertyChanged}" />
-        </Grid>
+                Text="" />
+        </DockPanel>
 
         <DataGrid
             x:Name="dataGridData"
@@ -47,24 +54,24 @@
             CanUserAddRows="False"
             CanUserDeleteRows="False"
             GridLinesVisibility="None"
-            ItemsSource="{Binding ParameterCollectionView}"
+            ItemsSource="{Binding}"
             RowDetailsVisibilityMode="VisibleWhenSelected"
             SelectionMode="Single">
 
-            <DataGrid.RowStyle>
+            <!--<DataGrid.RowStyle>
                 <Style TargetType="DataGridRow">
-                    <EventSetter Event="PreviewMouseLeftButtonDown" Handler="DataGridRow_MouseLeftButtonDown" />
+                    <EventSetter Handler="DataGridRow_MouseLeftButtonDown" />
                 </Style>
-            </DataGrid.RowStyle>
+            </DataGrid.RowStyle>-->
 
             <DataGrid.ContextMenu>
                 <ContextMenu>
                     <MenuItem
-                        Command="{Binding DataContext.SelectElementsCommand, RelativeSource={RelativeSource AncestorType={x:Type Window}}}"
+                        Command=""
                         CommandParameter="{Binding}"
                         Header="Select empty elements" />
                     <MenuItem
-                        Command="{Binding DataContext.SelectFilledElementsCommand, RelativeSource={RelativeSource AncestorType={x:Type Window}}}"
+                        Command=""
                         CommandParameter="{Binding}"
                         Header="Select filled elements" />
                 </ContextMenu>
@@ -72,8 +79,7 @@
 
             <DataGrid.Columns>
 
-                <!--  Column for displaying the category  -->
-                <DataGridTemplateColumn Header="Category Name">
+                <DataGridTemplateColumn Header="Category">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
                             <TextBlock VerticalAlignment="Center" Text="{Binding CategoriesString}" />
@@ -81,8 +87,7 @@
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
 
-                <!--  Column for displaying the parameter name  -->
-                <DataGridTemplateColumn Header="Parameter Name">
+                <DataGridTemplateColumn Header="Parameter">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
                             <TextBlock VerticalAlignment="Center" Text="{Binding Name}" />
@@ -90,8 +95,7 @@
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
 
-                <!--  Column for displaying the parameter count  -->
-                <DataGridTemplateColumn Header="Parameter&#10;Count">
+                <DataGridTemplateColumn Header="Count">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
                             <TextBlock VerticalAlignment="Center" Text="{Binding ParameterCount}" />
@@ -99,7 +103,6 @@
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
 
-                <!--  Column for displaying the count of empty parameters  -->
                 <DataGridTemplateColumn Header="Parameter&#10;Empty">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
@@ -108,7 +111,6 @@
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
 
-                <!--  Column for displaying the count of filled parameters  -->
                 <DataGridTemplateColumn Header="Parameter&#10;Filled">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
@@ -117,18 +119,15 @@
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
 
-                <!--  Column for displaying the percentage of filled parameters  -->
                 <DataGridTemplateColumn Header="Parameter&#10;Filled in %">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
                             <Grid VerticalAlignment="Center">
-                                <!--  Rectangle visualizing the percentage  -->
                                 <Rectangle
                                     Width="{Binding ParameterFilledProzent}"
                                     Height="18"
                                     HorizontalAlignment="Left"
                                     Fill="Pink" />
-                                <!--  Text displaying the percentage  -->
                                 <TextBlock HorizontalAlignment="Center" Text="{Binding ParameterFilledProzent}" />
                             </Grid>
                         </DataTemplate>
@@ -137,7 +136,6 @@
 
             </DataGrid.Columns>
 
-            <!--  RowDetailsTemplate to display child elements  -->
             <DataGrid.RowDetailsTemplate>
                 <DataTemplate>
                     <Grid MaxHeight="200">
@@ -200,5 +198,5 @@
             </DataGrid.RowDetailsTemplate>
 
         </DataGrid>
-    </Grid>
-</Window>
+    </DockPanel>
+</UserControl>
